--- a/d1-master/Project_Economic/src/main/resources/templates/home/createproduct.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/createproduct.html
@@ -2,15 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>E Store - eCommerce HTML Template</title>
+    <title>E Store</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="eCommerce HTML Template Free Download" name="keywords">
-    <meta content="eCommerce HTML Template Free Download" name="description">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
     <!-- Favicon -->
     <link th:href="@{/images/favicon.ico}" rel="icon">
 
-    <!-- Google Fonts -->
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Source+Code+Pro:700,900&display=swap"
           rel="stylesheet">
 
@@ -20,7 +18,7 @@
     <link th:href="@{/lib/slick/slick.css}" rel="stylesheet">
     <link th:href="@{/lib/slick/slick-theme.css}" rel="stylesheet">
 
-    <!-- Template Stylesheet -->
+    <!-- Stylesheet -->
     <link th:href="@{/css/stylehome.css}" rel="stylesheet">
 </head>
 
@@ -31,9 +29,9 @@
 <div class="breadcrumb-wrap">
     <div class="container-fluid">
         <ul class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item"><a href="#">Products</a></li>
-            <li class="breadcrumb-item active">Checkout</li>
+            <li class="breadcrumb-item"><a href="#">Estore</a></li>
+            <li class="breadcrumb-item"><a href="#">Sản phẩm</a></li>
+            <li class="breadcrumb-item active">Tạo sản phẩm</li>
         </ul>
     </div>
 </div>
@@ -45,14 +43,14 @@
         <div class="row">
             <div class="col-lg-8">
                 <div class="checkout-inner">
-                    <button type="button" class="btn btn-primary mb-2 btn_showformcreateproduct">Create product</button>
+                    <button type="button" class="btn btn-primary mb-2 btn_showformcreateproduct">Tạo sản phẩm</button>
                     <div class="billing-address col align-items-center " th:class="formcreateproduct"
                          style="display: none">
-                        <h2>Create new product</h2>
+                        <h2>Tạo sản phẩm</h2>
                         <form class="col pl-0" th:action="@{/api/products/create}" method="post"
                               th:object="${product}" enctype="multipart/form-data">
                             <div class="col-md-6">
-                                <input class="form-control" type="text" placeholder="Product name" th:field="*{name}">
+                                <input class="form-control" type="text" placeholder="Tên sản phẩm" th:field="*{name}">
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
@@ -144,17 +142,17 @@
                         <table class="table table-bordered">
                             <thead class="thead-dark">
                             <tr>
-                                <th>No</th>
-                                <th>Product name</th>
-                                <th>Descripton</th>
-                                <th>Price</th>
-                                <th>Sale price</th>
-                                <th>Image</th>
-                                <th>Quantity</th>
-                                <th>Likes</th>
-                                <th>Is_Active</th>
-                                <th>IS_Delete</th>
-                                <th>Edit</th>
+                                <th>STT</th>
+                                <th>Tên sản phẩm</th>
+                                <th>Mô tả</th>
+                                <th>Giá</th>
+                                <th>Giá sale</th>
+                                <th>Ảnh</th>
+                                <th>Số lượng</th>
+                                <th>Lượt thích</th>
+                                <th>Hoạt động</th>
+                                <th>Ẩn</th>
+                                <th>Chỉnh sửa</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -229,6 +227,7 @@
             </div>
         </div>
     </div>
+
 </div>
 <!-- Checkout End -->
 
@@ -246,8 +245,6 @@
         </div>
     </div>
 </div>
-<!-- Back to Top -->
-
 <!-- Back to Top -->
 <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
