--- a/d1-master/Project_Economic/src/main/resources/templates/home/product-list.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/product-list.html
@@ -4,13 +4,11 @@
     <meta charset="utf-8">
     <title>E Store</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="eCommerce HTML Template Free Download" name="keywords">
-    <meta content="eCommerce HTML Template Free Download" name="description">
 
     <!-- Favicon -->
     <link th:href="@{/images/favicon.ico}" rel="icon">
 
-    <!-- Google Fonts -->
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Source+Code+Pro:700,900&display=swap"
           rel="stylesheet">
 
@@ -19,7 +17,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link th:href="@{/lib/slick/slick.css}" rel="stylesheet">
     <link th:href="@{/lib/slick/slick-theme.css}" rel="stylesheet">
-    <!-- Template Stylesheet -->
+    <!--Stylesheet -->
     <link th:href="@{/css/stylehome.css}" rel="stylesheet">
 </head>
 
@@ -45,7 +43,7 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="product-search">
-                                        <input type="email" placeholder="Search" id="input-keyword" th:value="${key}">
+                                        <input type="email" placeholder="Tìm kiếm" id="input-keyword" th:value="${key}">
                                         <button><a href='#' onclick="getUrl()"><i class="fa fa-search"></i></a></button>
                                     </div>
                                 </div>
@@ -69,8 +67,8 @@
                                             <div class="dropdown-menu dropdown-menu-right">
                                                 <a href="#" class="dropdown-item" th:each="price:${prices}"
                                                 th:onclick="getUrlToPrices([[${price.getFirst_price()}]],[[${price.getSecond_price()}]])"
-                                                >$[[${price.getFirst_price()}]]
-                                                    to [[${price.getSecond_price()}]]</a>
+                                                >[[${price.getFirst_price()}]]
+                                                    - [[${price.getSecond_price()}]]₫</a>
                                             </div>
                                         </div>
                                     </div>
@@ -81,7 +79,7 @@
                     <div class="col-md-4" th:each="product:${products}">
                         <div class="product-item">
                             <div class="product-title">
-                                <a href="#" th:text="${product.getName()}"></a>4
+                                <a th:onclick="searchProductById([[${product.id}]])" th:text="${product.getName()}"></a>
                                 <div class="ratting">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -102,8 +100,8 @@
                                 </div>
                             </div>
                             <div class="product-price">
-                                <h3 th:text="${product.getCostPrice()}"><span>$</span>99</h3>
-                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Buy Now</a>
+                                <h3 th:text="${product.getSalePriceFormat()} + '₫'"></h3>
+                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Mua ngay</a>
                             </div>
                         </div>
                     </div>
@@ -112,7 +110,7 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination justify-content-center">
                             <li class="page-item" style="margin: 0 2px;">
-                                <a class="page-link" th:href="@{'/api/products/all/'+${previousPage}}">Previous</a>
+                                <a class="page-link" th:href="@{'/api/products/all/'+${previousPage}}">Trước</a>
                             </li>
 
                             <div th:each="indexPage,index:${totalPage}" style="margin: 0 2px;">
@@ -127,9 +125,9 @@
                             </div>
                             <li class="page-item" style="margin: 0 2px;">
                                 <a class="page-link" th:href="@{'/api/products/all/'+${currentPage+1}}"
-                                   th:if="${currentPage<lastPage}">Next</a>
+                                   th:if="${currentPage<lastPage}">Tiếp</a>
                                 <a class="page-link" th:href="@{'/api/products/all/'+${currentPage}}"
-                                   th:if="${currentPage==lastPage}">Next</a>
+                                   th:if="${currentPage==lastPage}">Tiếp</a>
                             </li>
                         </ul>
                     </nav>
@@ -138,7 +136,7 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination justify-content-center">
                             <li class="page-item" style="margin: 0 2px;">
-                                <a class="page-link" th:onclick="getUrlByPageNumber([[${previousPage}]])">Previous</a>
+                                <a class="page-link" th:onclick="getUrlByPageNumber([[${previousPage}]])">Trước</a>
                             </li>
 
                             <div th:each="indexPage,index:${totalPage}" style="margin: 0 2px;">
@@ -153,9 +151,9 @@
                             </div>
                             <li class="page-item" style="margin: 0 2px;">
                                 <a class="page-link" th:onclick="getUrlByPageNumber([[${currentPage+1}]])"
-                                   th:if="${currentPage<lastPage}">Next</a>
+                                   th:if="${currentPage<lastPage}">Tiếp</a>
                                 <a class="page-link" th:onclick="getUrlByPageNumber([[${currentPage}]])"
-                                   th:if="${currentPage==lastPage}">Next</a>
+                                   th:if="${currentPage==lastPage}">Tiếp</a>
                             </li>
                         </ul>
                     </nav>
@@ -164,7 +162,7 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination justify-content-center">
                             <li class="page-item" style="margin: 0 2px;">
-                                <a class="page-link" th:onclick="getUrlToCategoryAndPageNumber([[${previousPage}]])">Previous</a>
+                                <a class="page-link" th:onclick="getUrlToCategoryAndPageNumber([[${previousPage}]])">Trước</a>
                             </li>
 
                             <div th:each="indexPage,index:${totalPage}" style="margin: 0 2px;">
@@ -179,9 +177,9 @@
                             </div>
                             <li class="page-item" style="margin: 0 2px;">
                                 <a class="page-link" th:onclick="getUrlToCategoryAndPageNumber([[${currentPage+1}]])"
-                                   th:if="${currentPage<lastPage}">Next</a>
+                                   th:if="${currentPage<lastPage}">Tiếp</a>
                                 <a class="page-link" th:onclick="getUrlToCategoryAndPageNumber([[${currentPage}]])"
-                                   th:if="${currentPage==lastPage}">Next</a>
+                                   th:if="${currentPage==lastPage}">Tiếp</a>
                             </li>
                         </ul>
                     </nav>
@@ -190,7 +188,7 @@
                     <nav aria-label="Page navigation example">
                         <ul class="pagination justify-content-center">
                             <li class="page-item" style="margin: 0 2px;">
-                                <a class="page-link" th:onclick="getUrlPriceAndPagination([[${previousPage}]])">Previous</a>
+                                <a class="page-link" th:onclick="getUrlPriceAndPagination([[${previousPage}]])">Trước</a>
                             </li>
 
                             <div th:each="indexPage,index:${totalPage}" style="margin: 0 2px;">
@@ -205,9 +203,9 @@
                             </div>
                             <li class="page-item" style="margin: 0 2px;">
                                 <a class="page-link" th:onclick="getUrlPriceAndPagination([[${currentPage+1}]])"
-                                   th:if="${currentPage<lastPage}">Next</a>
+                                   th:if="${currentPage<lastPage}">Tiếp</a>
                                 <a class="page-link" th:onclick="getUrlPriceAndPagination([[${currentPage}]])"
-                                   th:if="${currentPage==lastPage}">Next</a>
+                                   th:if="${currentPage==lastPage}">Tiếp</a>
                             </li>
                         </ul>
                     </nav>
@@ -248,16 +246,14 @@
                                 </div>
                             </div>
                             <div class="product-price">
-                                <h3 th:text="${product.getCostPrice()}"><span>$</span>99</h3>
-                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Buy Now</a>
+                                <h3 th:text="${product.getSalePriceFormat()} + '₫'"><span>$</span>99</h3>
+                                <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Mua ngay</a>
                             </div>
                         </div>
                     </div>
                 </div>
-
         </div>
     </div>
-
 </div>
 
 <div style="margin-top: 50px"></div>
