--- a/d1-master/Project_Economic/src/main/resources/templates/home/addnew.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/addnew.html
@@ -67,14 +67,13 @@
                         <h2>Thêm danh mục</h2>
                         <div class="row">
                             <div class="col-md-6 mr-2">
-                                <label>Tên danh mục</label>
+<!--                                <label>Tên danh mục</label>-->
                                 <input class="form-control" type="text" placeholder="Tên danh mục" th:field="*{name}">
                             </div>
                         </div>
                         <button type="submit" class="btn btn-outline-primary"
                                 style="background: #34ce57;border: #34ce57;color: black">Tạo
                         </button>
-
                     </form>
                     <h2>Tất cả danh mục</h2>
                     <div>
