--- a/d1-master/Project_Economic/src/main/resources/templates/home/my-account.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/my-account.html
@@ -92,9 +92,14 @@
                                     <div class="col-md-6">
                                         <input class="form-control" type="text" th:placeholder="${user.getEmail()}">
                                     </div>
-                                    <div class="col-md-6">
-                                        <input class="form-control" type="text" th:placeholder="'Tổng số tiền còn lại: '+ ${user.getTotalMany()}">
-                                    </div>
+<!--                                    <div class="col-md-6">-->
+<!--                                        <input class="form-control" type="text" th:placeholder="${user.getAddress()}">-->
+<!--                                    </div>-->
+<!--                                    <form th:action="@{api/}">-->
+                                        <div class="col-md-6">
+                                            <input class="form-control" type="text" th:placeholder="${user.getAddress() != null ? user.getAddress() : 'Địa chỉ'}">
+                                        </div>
+                                    </form>
                                     <div class="col-md-12">
                                         <button class="btn">Cập nhật</button>
                                         <br><br>
@@ -116,35 +121,23 @@
                                         <br><br>
                                     </div>
                                 </div>
-                                <h4>Thay đổi thông tin</h4>
+                                <h4>Nạp tiền</h4>
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <input class="form-control" type="text" th:placeholder="${user.getUsername()}">
+                                        <input class="form-control" type="text" placeholder="Tên ngân hàng">
                                     </div>
                                     <div class="col-md-6">
-                                        <input class="form-control" type="text" th:placeholder="${user.getEmail()}">
+                                        <input class="form-control" type="text" placeholder="Số tài khoản">
                                     </div>
                                     <div class="col-md-6">
-                                        <input class="form-control" type="text" th:placeholder="'Tổng số tiền còn lại: '+ ${user.getTotalMany()}">
+                                        <input class="form-control" type="text" placeholder="Số tiền cần nạp">
+                                    </div>
+                                    <div class="col-md-6">
+                                        <input class="form-control" type="text" th:placeholder="'Tổng số tiền còn lại: ' + ${user.getTotalMany() + '₫'}">
                                     </div>
                                     <div class="col-md-12">
                                         <button class="btn">Cập nhật</button>
                                         <br><br>
-                                    </div>
-                                </div>
-                                <h4>Đổi mật khẩu</h4>
-                                <div class="row">
-                                    <div class="col-md-12">
-                                        <input class="form-control" type="text" placeholder="Mật khẩu hiện tại">
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input class="form-control" type="text" placeholder="Mật khẩu mới">
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input class="form-control" type="text" placeholder="Nhập lại mật khẩu">
-                                    </div>
-                                    <div class="col-md-12">
-                                        <button class="btn">Lưu thay đổi</button>
                                     </div>
                                 </div>
                             </div>
