--- a/d1-master/Project_Economic/src/main/resources/templates/home/index.html
+++ b/d1-master/Project_Economic/src/main/resources/templates/home/index.html
@@ -66,10 +66,18 @@
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="search">
-                            <input type="text" placeholder="Search">
-                            <button><i class="fa fa-search"></i></button>
-                        </div>
+<!--                        <div class="search">-->
+<!--                            <input type="text" placeholder="Search">-->
+<!--                            <button><i class="fa fa-search"></i></button>-->
+<!--                        </div>-->
+<!--                        <div class="search">-->
+<!--                            <input type="text" placeholder="Tìm kiếm" id="input-keyword" th:value="${key}">-->
+<!--                            <button><a href='#' onclick="getUrl()"><i class="fa fa-search"></i></a></button>-->
+<!--                        </div>-->
+<!--                        <div class="product-search">-->
+<!--                            <input type="email" placeholder="Tìm kiếm" id="input-keyword" th:value="${key}">-->
+<!--                            <button><a href='#' onclick="getUrl()"><i class="fa fa-search"></i></a></button>-->
+<!--                        </div>-->
                     </div>
                     <div class="col-md-3">
                         <div class="user">
